fix input bug if value too large

--- a/src/components/inputWithLabel/inputWithLabel.style.css
+++ b/src/components/inputWithLabel/inputWithLabel.style.css
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  flex-grow: 1;
 
   >.input__error {
     position: absolute;
